--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -15,13 +15,12 @@
   },
   "prettier": "@yuki/prettier-config",
   "dependencies": {
+    "@eslint-react/eslint-plugin": "^1.52.2",
     "@next/eslint-plugin-next": "^15.3.5",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-turbo": "^2.5.4",
-    "typescript-eslint": "^8.35.1"
+    "typescript-eslint": "^8.36.0"
   },
   "devDependencies": {
     "@yuki/prettier-config": "workspace:*",
