--- a/apps/kaze/package.json
+++ b/apps/kaze/package.json
@@ -24,6 +24,7 @@
     "@yuki/ui": "workspace:*",
     "@yuki/validators": "workspace:*",
     "next": "15.3.5",
+    "nuqs": "^2.4.3",
     "react": "catalog:react",
     "react-dom": "catalog:react"
   },
