chore: minor changes

--- a/apps/pepe/package.json
+++ b/apps/pepe/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "bun run with-env react-router build",
     "clean": "git clean -xdf .cache .react-router .turbo .vercel build node_modules",
-    "dev": "bun run with-env react-router dev  --port 3001",
+    "dev": "bun run with-env react-router dev",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "bun run with-env react-router typegen && eslint",
     "start": "PORT=3001 bun run with-env react-router-serve ./build/server/nodejs_*/index.js",
