--- a/apps/pepe/package.json
+++ b/apps/pepe/package.json
@@ -25,6 +25,7 @@
     "@yuki/auth": "workspace:*",
     "@yuki/db": "workspace:*",
     "@yuki/ui": "workspace:*",
+    "@yuki/uploader": "workspace:*",
     "@yuki/validators": "workspace:*",
     "isbot": "^5.1.28",
     "react": "catalog:react",
