--- a/turbo.json
+++ b/turbo.json
@@ -16,7 +16,7 @@
     "AUTH_GOOGLE_ID",
     "AUTH_GOOGLE_SECRET",
     "DATABASE_URL",
-    "NEXT_PUBLIC_API_URL",
+    "DATABASE_URL_UNPOOLED",
     "PORT"
   ],
   "globalPassThroughEnv": [
