--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,7 @@
       "outputs": [".cache/tsbuildinfo.json", "dist/**"]
     },
     "clean": {
+      "dependsOn": ["^clean"],
       "cache": false
     },
     "//#clean": {
