feat: add welcome and change password email

--- a/apps/kaze/package.json
+++ b/apps/kaze/package.json
@@ -21,6 +21,7 @@
     "@yuki/api": "workspace:*",
     "@yuki/auth": "workspace:*",
     "@yuki/db": "workspace:*",
+    "@yuki/email": "workspace:*",
     "@yuki/ui": "workspace:*",
     "@yuki/uploader": "workspace:*",
     "@yuki/validators": "workspace:*",
