--- a/turbo.json
+++ b/turbo.json
@@ -38,9 +38,13 @@
     "AUTH_FACEBOOK_SECRET",
     "AUTH_GOOGLE_ID",
     "AUTH_GOOGLE_SECRET",
+
     "DATABASE_URL",
     "DATABASE_URL_UNPOOLED",
+
     "UPLOADTHING_TOKEN",
+    "RESEND_TOKEN",
+
     "PORT"
   ],
   "globalPassThroughEnv": [
