--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@yuki/tsconfig/internal-package.json",
   "compilerOptions": {
     "lib": ["DOM", "ES2022"],
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "rootDir": "src"
   },
   "include": ["src"],
