--- a/packages/uploader/tsconfig.json
+++ b/packages/uploader/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@yuki/tsconfig/internal-package.json",
   "compilerOptions": {
     "lib": ["DOM", "ES2022"],
+    "jsx": "preserve",
     "rootDir": "src"
   },
   "include": ["src"],
