feat(dashboard): add login page

--- a/turbo.json
+++ b/turbo.json
@@ -45,6 +45,9 @@
     "UPLOADTHING_TOKEN",
     "RESEND_TOKEN",
 
+    "NEXT_PUBLIC_APP_URL",
+    "NEXT_PUBLIC_DASHBOARD_URL",
+
     "PORT"
   ],
   "globalPassThroughEnv": [
