--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -33,12 +33,14 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@yuki/uploader": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.534.0",
+    "lucide-react": "^0.536.0",
     "next-themes": "^0.4.6",
     "react": "catalog:react",
     "sonner": "^2.0.6",
