feat: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ UPLOADTHING_TOKEN=
 
 RESEND_TOKEN=
 
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
+NEXT_PUBLIC_DASHBOARD_URL="http://localhost:3001"
