chore: add version to root package.json

--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "yukinu",
+  "version": "0.0.0",
   "private": true,
   "workspaces": {
     "packages": [
@@ -63,4 +65,3 @@
     "node": ">=22.0.0"
   }
 }
-
