--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
     "bump-deps": "bunx npm-check-updates --deep -u && bun install",
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo run clean",
+    "db:generate": "turbo run db:generate -F @yukinu/db",
+    "db:migrate": "turbo run db:migrate -F @yukinu/db",
+    "db:push": "turbo run db:push -F @yukinu/db",
+    "db:studio": "turbo run db:studio -F @yukinu/db",
     "dev": "turbo dev --continue",
     "format": "turbo run format --continue -- --cache --cache-location .cache/prettiercache",
     "format:fix": "turbo run format --continue -- --write --cache --cache-location .cache/prettiercache",
