--- a/turbo.json
+++ b/turbo.json
@@ -13,6 +13,22 @@
     "//#clean": {
       "cache": false
     },
+    "db:generate": {
+      "cache": false,
+      "interactive": true
+    },
+    "db:migrate": {
+      "cache": false,
+      "interactive": true
+    },
+    "db:push": {
+      "cache": false,
+      "interactive": true
+    },
+    "db:studio": {
+      "cache": false,
+      "persistent": true
+    },
     "dev": {
       "cache": false,
       "persistent": true
@@ -51,4 +67,3 @@
     "npm_lifecycle_event"
   ]
 }
-
