fix: env key base on neon

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 # Database configuration
 POSTGRES_USER=""
 POSTGRES_PASSWORD=""
-POSTGRES_DB=""
+POSTGRES_DATABASE=""
 POSTGRES_HOST=""
 POSTGRES_PORT=
 
@@ -16,4 +16,3 @@ AUTH_GOOGLE_SECRET=""
 # Third-party service API tokens
 RESEND_TOKEN=""
 UPLOADTHING_TOKEN=""
-
