--- a/turbo.json
+++ b/turbo.json
@@ -50,10 +50,19 @@
     }
   },
   "globalEnv": [
-    "AUTH_DISCORD_ID",
-    "AUTH_DISCORD_SECRET",
-    "DATABASE_URL",
-    "NEXT_PUBLIC_API_URL",
+    "POSTGRES_USER",
+    "POSTGRES_PASSWORD",
+    "POSTGRES_DB",
+    "POSTGRES_HOST",
+    "POSTGRES_PORT",
+    "AUTH_FACEBOOK_ID",
+    "AUTH_FACEBOOK_SECRET",
+    "AUTH_GOOGLE_ID",
+    "AUTH_GOOGLE_SECRET",
+    "RESEND_TOKEN",
+    "UPLOADTHING_TOKEN",
+    "NEXT_PUBLIC_WEB_URL",
+    "NEXT_PUBLIC_DASHBOARD_URL",
     "PORT"
   ],
   "globalPassThroughEnv": [
