--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "@yukinu/tsconfig/internal-package.json",
   "compilerOptions": {
-    "rootDir": "src"
+    "rootDir": "src",
+    "lib": ["es2022", "dom", "dom.iterable"]
   },
   "include": ["src"],
   "exclude": ["node_modules"]
