--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@yukinu/dashboard",
   "version": "0.0.2",
-  "private": true,
+  "private": false,
   "type": "module",
   "scripts": {
     "build": "bun run with-env react-router build",
