--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@yukinu/web",
   "version": "0.0.2",
-  "private": true,
+  "private": false,
   "type": "module",
   "scripts": {
     "build": "bun run with-env next build",
