--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "scripts": {
     "build": "turbo run build",
     "bump-deps": "bunx npm-check-updates --deep -u && bun install",
+    "changeset": "changeset",
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo run clean",
     "db:generate": "turbo run db:generate -F @yukinu/db",
@@ -49,18 +50,34 @@
     "format:fix": "turbo run format --continue -- --write --cache --cache-location .cache/prettiercache",
     "postinstall": "bun run lint:ws",
     "lint": "turbo run lint --continue -- --cache --cache-location .cache/eslintcache",
+    "lint-staged": "lint-staged",
     "lint:fix": "turbo run lint --continue -- --fix --cache --cache-location .cache/eslintcache",
     "lint:ws": "bunx sherif@latest",
+    "prepare": "husky",
     "typecheck": "turbo run typecheck"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,css,md}": [
+      "bun run format:fix",
+      "git add --all"
+    ],
+    "*.{js,jsx,ts,tsx}": [
+      "bun run lint:fix",
+      "git add --all"
+    ]
   },
   "prettier": "@yukinu/prettier-config",
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.7",
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
     "@turbo/gen": "^2.5.8",
     "@types/bun": "^1.2.23",
     "@yukinu/prettier-config": "workspace:*",
     "@yukinu/tsconfig": "workspace:*",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.3",
     "turbo": "^2.5.8"
   },
   "packageManager": "bun@1.2.23",
