--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -34,6 +34,7 @@
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
     "react": "catalog:react",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
