feat(web): add sign out button

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -42,5 +42,8 @@
     "eslint": "catalog:",
     "prettier": "catalog:",
     "typescript": "catalog:"
+  },
+  "peerDependencies": {
+    "@tanstack/react-query": "catalog:api"
   }
 }
