--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -33,9 +33,10 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.544.0",
+    "lucide-react": "^0.545.0",
     "next-themes": "^0.4.6",
     "react": "catalog:react",
     "sonner": "^2.0.7",
