--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
     "next-themes": "^0.4.6",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
