--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,6 +28,8 @@
   },
   "prettier": "@yukinu/prettier-config",
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
