--- a/tools/prettier/package.json
+++ b/tools/prettier/package.json
@@ -13,8 +13,8 @@
   },
   "prettier": "@yukinu/prettier-config",
   "dependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
-    "prettier-plugin-tailwindcss": "^0.6.14"
+    "@ianvs/prettier-plugin-sort-imports": "catalog:",
+    "prettier-plugin-tailwindcss": "catalog:"
   },
   "devDependencies": {
     "@yukinu/tsconfig": "workspace:*",
