feat(web): create user layout

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -45,6 +45,7 @@
   },
   "peerDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "catalog:",
+    "@tanstack/react-query": "catalog:",
     "@types/node": "catalog:",
     "@types/react": "catalog:react",
     "prettier-plugin-tailwindcss": "catalog:",
