--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -8,6 +8,10 @@
       "types": "./dist/index.d.ts",
       "default": "./src/index.ts"
     },
+    "./mock": {
+      "types": "./dist/index.mock.d.ts",
+      "default": "./src/index.mock.ts"
+    },
     "./schema/*": {
       "types": "./dist/schema/*.d.ts",
       "default": "./src/schema/*.ts"
