--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
       - uses: actions/checkout@v5
 
       - name: Setup
-        user: ./tools/github/setup
+        uses: ./tools/github/setup
 
       - name: Copy env
         shell: bash
