feat: added dashboard layout

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ AUTH_GOOGLE_SECRET=""
 # Third-party service API tokens
 RESEND_TOKEN=""
 UPLOADTHING_TOKEN=""
+
+# Application settings
+NEXT_PUBLIC_WEB_URL="http://localhost:3000"
+NEXT_PUBLIC_DASHBOARD_URL="http://localhost:3001"
