--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@tanstack/react-query": "^5.90.5",
     "@types/node": "^24.8.1",
     "eslint": "^9.38.0",
+    "nuqs": "^2.7.2",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "typescript": "^5.9.3"
