--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "build": "bun run --env-file ../../.env react-router build",
     "clean": "git clean -xdf .cache .react-router .turbo .vercel build node_modules",
-    "dev": "bun run --env-file ../../.env react-router dev",
+    "dev": "bun run --env-file ../../.env react-router dev --port 3001",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "bun run --env-file ../../.env react-router typegen && eslint",
-    "start": "PORT=3001 bun run --env-file ../../.env react-router-serve ./build/server/index.js",
+    "start": "bun run --env-file ../../.env react-router-serve ./build/server/index.js",
     "typecheck": "bun run --env-file ../../.env react-router typegen && tsc --noEmit"
   },
   "prettier": "@yukinu/prettier-config",
