--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -6,17 +6,16 @@
   "scripts": {
     "build": "bun run --env-file ../../.env react-router build",
     "clean": "git clean -xdf .cache .react-router .turbo .vercel build node_modules",
-    "dev": "bun run --env-file ../../.env react-router dev --port 3001",
+    "dev": "bun --env-file ../../.env react-router dev",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "bun run --env-file ../../.env react-router typegen && eslint",
-    "start": "bun run --env-file ../../.env react-router-serve ./build/server/index.js",
+    "start": "bun run --env-file ../../.env react-router-serve build/server/index.js",
     "typecheck": "bun run --env-file ../../.env react-router typegen && tsc --noEmit"
   },
   "prettier": "@yukinu/prettier-config",
   "dependencies": {
     "@react-router/fs-routes": "^7.9.4",
     "@react-router/node": "^7.9.4",
-    "@react-router/serve": "^7.9.4",
     "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:trpc",
     "@trpc/tanstack-react-query": "catalog:trpc",
@@ -34,6 +33,7 @@
   },
   "devDependencies": {
     "@react-router/dev": "^7.9.4",
+    "@react-router/serve": "^7.9.4",
     "@tailwindcss/vite": "catalog:tailwind",
     "@types/node": "catalog:",
     "@types/react": "catalog:react",
