--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,23 +4,20 @@ services:
       context: .
       dockerfile: ./apps/web/Dockerfile
     restart: unless-stopped
-    env_file: .env
-    environment:
-      POSTGRES_HOST: 'db'
     expose:
       - '3000'
     depends_on:
       - db
 
-  # dashboard:
-  #   build:
-  #     context: .
-  #     dockerfile: ./apps/dashboard/Dockerfile
-  #   restart: unless-stopped
-  #   expose:
-  #     - '3001'
-  #   depends_on:
-  #     - db
+  dashboard:
+    build:
+      context: .
+      dockerfile: ./apps/dashboard/Dockerfile
+    restart: unless-stopped
+    expose:
+      - '3000'
+    depends_on:
+      - db
 
   nginx:
     image: nginx:latest
@@ -28,10 +25,12 @@ services:
     ports:
       - '80:80'
       - '443:443'
+    volumes:
+      - ./tools/nginx:/etc/nginx/conf.d
+      - ./certbot/www:/var/www/certbot
+      - /etc/letsencrypt:/etc/letsencrypt
     depends_on:
       - web
-    volumes:
-      - ./tools/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
 
   db:
     image: postgres:18
