--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,8 @@ services:
       - '80:80'
       - '443:443'
     volumes:
-      - ./tools/nginx:/etc/nginx/conf.d
-      - ./certbot/www:/var/www/certbot
+      - ./tools/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./tools/nginx/certbot-www:/var/www/certbot
       - /etc/letsencrypt:/etc/letsencrypt
     depends_on:
       - web
