--- a/tools/nginx/default.conf
+++ b/tools/nginx/default.conf
@@ -26,7 +26,7 @@ server {
 
 server {
   listen 80;
-  server_name localhost;
+  server_name yukinu.tiesen.id.vn;
 
   location /.well-known/acme-challenge/ {
     root /var/www/certbot;
