--- a/tools/nginx/default.conf
+++ b/tools/nginx/default.conf
@@ -13,20 +13,39 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
   }
-
-  # location /dashboard/ {
-  #   proxy_pass http://dashboard:3000/;
-  #   proxy_http_version 1.1;
-  #   proxy_set_header Host $host;
-  #   proxy_set_header X-Real-IP $remote_addr;
-  #   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  #   proxy_set_header X-Forwarded-Proto $scheme;
-  # }
 }
 
 server {
   listen 80;
   server_name yukinu.tiesen.id.vn;
+
+  location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
+  }
+
+  return 301 https://$host$request_uri;
+}
+
+server {
+  listen 443 ssl;
+  server_name dashboard.yukinu.tiesen.id.vn;
+
+  ssl_certificate /etc/letsencrypt/live/dashboard.yukinu.tiesen.id.vn/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/dashboard.yukinu.tiesen.id.vn/privkey.pem;
+
+  location / {
+    proxy_pass http://dashboard:3000/;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+}
+
+server {
+  listen 80;
+  server_name dashboard.yukinu.tiesen.id.vn;
 
   location /.well-known/acme-challenge/ {
     root /var/www/certbot;
