--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     expose:
       - '3000'
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
   dashboard:
     build:
@@ -19,7 +20,8 @@ services:
     expose:
       - '3000'
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
   nginx:
     image: nginx:latest
@@ -46,6 +48,13 @@ services:
       - '${POSTGRES_PORT:-5432}:5432'
     volumes:
       - pg_data:/var/lib/postgresql
+  healthcheck:
+    test:
+      ['CMD-SHELL', 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DATABASE}']
+    interval: 5s
+    timeout: 5s
+    retries: 5
+    start_period: 5s
 
 volumes:
   pg_data:
