--- a/tools/nginx/default.conf
+++ b/tools/nginx/default.conf
@@ -5,6 +5,25 @@ server {
   ssl_certificate /etc/letsencrypt/live/yukinu.tiesen.id.vn/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/yukinu.tiesen.id.vn/privkey.pem;
 
+  location /api/ {
+    proxy_pass http://dashboard:3000/api/;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+
+    # CORS headers
+    add_header 'Access-Control-Allow-Origin' 'https://yukinu.tiesen.id.vn' always;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+    add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+
+    # OPTIONS preflight
+    if ($request_method = OPTIONS) {
+        return 204;
+    }
+  }
+
   location / {
     proxy_pass http://web:3000/;
     proxy_http_version 1.1;
@@ -32,6 +51,25 @@ server {
 
   ssl_certificate /etc/letsencrypt/live/dashboard.yukinu.tiesen.id.vn/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/dashboard.yukinu.tiesen.id.vn/privkey.pem;
+
+  location /api/ {
+    proxy_pass http://dashboard:3000/api/;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+
+    # CORS headers
+    add_header 'Access-Control-Allow-Origin' 'https://dashboard.yukinu.tiesen.id.vn' always;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+    add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+
+    # OPTIONS preflight
+    if ($request_method = OPTIONS) {
+        return 204;
+    }
+  }
 
   location / {
     proxy_pass http://dashboard:3000/;
