feat: toggle stream link flag

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ AUTH_GOOGLE_SECRET=""
 RESEND_TOKEN=""
 UPLOADTHING_TOKEN=""
 
-# Application settings
-NEXT_PUBLIC_WEB_URL="http://localhost:3000"
-NEXT_PUBLIC_DASHBOARD_URL="http://localhost:3001"
+# App configuration
+NEXT_PUBLIC_WEB_URL="localhost:3000"
+NEXT_PUBLIC_DASHBOARD_URL="localhost:3001"
+NEXT_PUBLIC_TRPC_USE_STREAMING="true" # Disable httpBatchStreamLink if deploying to Nginx
