feat: toggle ssl flag

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ POSTGRES_PORT=5432
 POSTGRES_USER=""
 POSTGRES_PASSWORD=""
 POSTGRES_DATABASE="yuki_db"
+POSTGRES_SSL_MODE="true" # Disable SSL mode for local development
 
 # OAuth configuration
 AUTH_FACEBOOK_ID=""
