fix: trpc batching error

--- a/apps/dashboard/Dockerfile
+++ b/apps/dashboard/Dockerfile
@@ -34,7 +34,8 @@ WORKDIR /app
 COPY --from=builder /build/apps/dashboard/build ./apps/dashboard/build
 COPY --from=builder /build/apps/dashboard/node_modules ./apps/dashboard/node_modules
 COPY --from=builder /build/node_modules ./node_modules
+COPY .env .env
 
-WORKDIR /app/apps/dashboard
 ENV PORT=3000
-CMD ["bun", "react-router-serve", "build/server/index.js"]
+WORKDIR /app/apps/dashboard
+CMD ["bun", "--env-file=.env", "react-router-serve", "build/server/index.js"]
