--- a/turbo.json
+++ b/turbo.json
@@ -49,6 +49,7 @@
     "POSTGRES_USER",
     "POSTGRES_PASSWORD",
     "POSTGRES_DATABASE",
+    "POSTGRES_SSL_MODE",
 
     "AUTH_FACEBOOK_ID",
     "AUTH_FACEBOOK_SECRET",
@@ -60,6 +61,7 @@
 
     "NEXT_PUBLIC_WEB_URL",
     "NEXT_PUBLIC_DASHBOARD_URL",
+    "NEXT_PUBLIC_TRPC_USE_STREAMING",
     "PORT"
   ],
   "globalPassThroughEnv": [
