--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
         condition: service_healthy
 
   nginx:
-    image: nginx:latest
+    image: nginx:trixie
     restart: unless-stopped
     ports:
       - '80:80'
@@ -38,7 +38,7 @@ services:
       - dashboard
 
   db:
-    image: postgres:18
+    image: postgres:18.0
     restart: unless-stopped
     environment:
       POSTGRES_USER: '${POSTGRES_USER}'
