feat: update metadata

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
+# App configuration
+NEXT_PUBLIC_APP_NAME="My App"
+NEXT_PUBLIC_APP_DESCRIPTION="This is my awesome application."
+NEXT_PUBLIC_WEB_URL="localhost:3000"
+NEXT_PUBLIC_DASHBOARD_URL="localhost:3001"
+NEXT_PUBLIC_TRPC_USE_STREAMING="true" # Disable httpBatchStreamLink if deploying to Nginx
+
 # Database configuration
 POSTGRES_HOST="127.0.0.1"
 POSTGRES_PORT=5432
@@ -15,8 +22,3 @@ AUTH_GOOGLE_SECRET=""
 # Third-party service API tokens
 RESEND_TOKEN=""
 UPLOADTHING_TOKEN=""
-
-# App configuration
-NEXT_PUBLIC_WEB_URL="localhost:3000"
-NEXT_PUBLIC_DASHBOARD_URL="localhost:3001"
-NEXT_PUBLIC_TRPC_USE_STREAMING="true" # Disable httpBatchStreamLink if deploying to Nginx
