--- a/turbo.json
+++ b/turbo.json
@@ -44,6 +44,12 @@
     }
   },
   "globalEnv": [
+    "NEXT_PUBLIC_APP_NAME",
+    "NEXT_PUBLIC_APP_DESCRIPTION",
+    "NEXT_PUBLIC_WEB_URL",
+    "NEXT_PUBLIC_DASHBOARD_URL",
+    "NEXT_PUBLIC_TRPC_USE_STREAMING",
+
     "POSTGRES_HOST",
     "POSTGRES_PORT",
     "POSTGRES_USER",
@@ -59,9 +65,6 @@
     "RESEND_TOKEN",
     "UPLOADTHING_TOKEN",
 
-    "NEXT_PUBLIC_WEB_URL",
-    "NEXT_PUBLIC_DASHBOARD_URL",
-    "NEXT_PUBLIC_TRPC_USE_STREAMING",
     "PORT"
   ],
   "globalPassThroughEnv": [
