--- a/packages/db/turbo.json
+++ b/packages/db/turbo.json
@@ -1,25 +1,5 @@
 {
   "$schema": "../../node_modules/turbo/schema.json",
   "extends": ["//"],
-  "tasks": {
-    "build": {
-      "outputs": ["dist/**"]
-    },
-    "db:generate": {
-      "cache": false,
-      "interactive": true
-    },
-    "db:migrate": {
-      "cache": false,
-      "interactive": true
-    },
-    "db:push": {
-      "cache": false,
-      "interactive": true
-    },
-    "db:studio": {
-      "cache": false,
-      "persistent": true
-    }
-  }
+  "tasks": {}
 }
