--- a/packages/validators/turbo.json
+++ b/packages/validators/turbo.json
@@ -1,9 +1,5 @@
 {
   "$schema": "../../node_modules/turbo/schema.json",
   "extends": ["//"],
-  "tasks": {
-    "build": {
-      "outputs": ["dist/**"]
-    }
-  }
+  "tasks": {}
 }
