--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -9,7 +9,7 @@
     "dev": "bun --env-file ../../.env react-router dev",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "bun run --env-file ../../.env react-router typegen && eslint",
-    "start": "bun run --env-file ../../.env react-router-serve build/server/index.js",
+    "start": "bun run --env-file ../../.env react-router-serve build/server/nodejs_*/index.js",
     "typecheck": "bun run --env-file ../../.env react-router typegen && tsc --noEmit"
   },
   "prettier": "@yukinu/prettier-config",
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:trpc",
     "@trpc/tanstack-react-query": "catalog:trpc",
+    "@vercel/react-router": "^1.2.3",
     "@yukinu/api": "workspace:*",
     "@yukinu/auth": "workspace:*",
     "@yukinu/db": "workspace:*",
