--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "nuqs": "^2.7.2",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
+    "tsdown": "^0.16.0",
     "typescript": "^5.9.3"
   },
   "catalogs": {
