--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -33,7 +33,7 @@
     "@yukinu/tsconfig": "workspace:*",
     "eslint": "catalog:",
     "prettier": "catalog:",
-    "tsdown": "^0.16.0",
+    "tsdown": "catalog:",
     "typescript": "catalog:"
   },
   "peerDependencies": {
