--- a/packages/validators/tsconfig.json
+++ b/packages/validators/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "extends": "@yukinu/tsconfig/internal-package.json",
   "compilerOptions": {
-    "rootDir": "src"
+    "rootDir": "src",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src"],
   "exclude": ["node_modules"]
