--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -11,11 +11,11 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@yukinu/ui",
-    "hooks": "@yukinu/ui/hooks",
-    "lib": "@yukinu/ui/lib",
-    "utils": "@yukinu/ui",
-    "ui": "@yukinu/ui/components"
+    "components": "@/components",
+    "hooks": "@/hooks",
+    "lib": "@/lib",
+    "utils": "@/lib/utils",
+    "ui": "@/components"
   },
   "iconLibrary": "lucide"
 }
