--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,38 +4,33 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": {
-      "types": "./dist/lib/utils.d.ts",
-      "default": "./src/lib/utils.ts"
-    },
-    "./*": {
-      "types": "./dist/components/*.d.ts",
-      "default": "./src/components/*.tsx"
-    },
-    "./hooks/*": {
-      "types": "./dist/hooks/*.d.ts",
-      "default": "./src/hooks/*.tsx"
-    },
-    "./tailwind.css": "./src/tailwind.css"
+    ".": "./dist/lib/utils.mjs",
+    "./*": "./dist/components/*.mjs",
+    "./hooks/*": "./dist/hooks/*.mjs",
+    "./tailwind.css": "./dist/tailwind.css",
+    "./package.json": "./package.json"
   },
+  "main": "./dist/utils.mjs",
+  "module": "./dist/utils.mjs",
+  "types": "./dist/utils.d.mts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsdown",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
-    "dev": "tsc --watch",
+    "dev": "tsdown --watch",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
     "typecheck": "tsc --noEmit"
   },
   "prettier": "@yukinu/prettier-config",
   "dependencies": {
-    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-radio-group": "^1.3.8",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -51,6 +46,7 @@
     "eslint": "catalog:",
     "prettier": "catalog:",
     "tailwindcss": "catalog:tailwind",
+    "tsdown": "catalog:",
     "tw-animate-css": "^1.4.0",
     "typescript": "catalog:"
   },
