--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -4,7 +4,7 @@
     "rootDir": "src",
     "baseUrl": ".",
     "paths": {
-      "@yukinu/ui/*": ["./src/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["src"],
