--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "type": "module",
   "exports": {
-    "./*": "./dist/*.mjs",
+    "./*": {
+      "default": "./dist/*.mjs",
+      "types": "./dist/*.d.mts"
+    },
     "./package.json": "./package.json"
   },
   "scripts": {
