chore: minor changes

--- a/apps/dashboard/turbo.json
+++ b/apps/dashboard/turbo.json
@@ -4,6 +4,9 @@
   "tasks": {
     "build": {
       "outputs": ["build/**", ".react-router/**"]
+    },
+    "dev": {
+      "dependsOn": ["@yukinu/validators#build"]
     }
   }
 }
