feat(dashboard): added loading spinner

--- a/apps/dashboard/turbo.json
+++ b/apps/dashboard/turbo.json
@@ -6,7 +6,7 @@
       "outputs": ["build/**", ".react-router/**"]
     },
     "dev": {
-      "dependsOn": ["@yukinu/validators#build"]
+      "dependsOn": ["^build"]
     }
   }
 }
