--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -13,6 +13,9 @@
     "typecheck": "bun run --env-file ../../.env react-router typegen && tsc --noEmit"
   },
   "prettier": "@yukinu/prettier-config",
+  "overrides": {
+    "vite": "npm:rolldown-vite@7.1.14"
+  },
   "dependencies": {
     "@react-router/fs-routes": "^7.9.5",
     "@react-router/node": "^7.9.5",
@@ -46,7 +49,7 @@
     "prettier": "catalog:",
     "tailwindcss": "catalog:tailwind",
     "typescript": "catalog:",
-    "vite": "^7.2.0",
+    "vite": "npm:rolldown-vite@7.1.14",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "peerDependencies": {
