--- a/apps/web/turbo.json
+++ b/apps/web/turbo.json
@@ -6,7 +6,7 @@
       "outputs": [".next/**", "!.next/cache/**", "next-env.d.ts"]
     },
     "dev": {
-      "dependsOn": ["@yukinu/validators#build"]
+      "dependsOn": ["^build"]
     }
   }
 }
