feat(apps): added loading, error pages

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "tsdown",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
-    "dev": "tsdown --watch ./src",
+    "~dev": "tsdown --watch ./src",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
     "typecheck": "tsc --noEmit"
