fix: server env show in debug tab

--- a/turbo.json
+++ b/turbo.json
@@ -45,10 +45,17 @@
   },
   "globalEnv": [
     "NEXT_PUBLIC_APP_NAME",
+    "VITE_APP_NAME",
     "NEXT_PUBLIC_APP_DESCRIPTION",
+    "VITE_APP_DESCRIPTION",
+    "WEB_URL",
     "NEXT_PUBLIC_WEB_URL",
+    "VITE_WEB_URL",
+    "DASHBOARD_URL",
     "NEXT_PUBLIC_DASHBOARD_URL",
+    "VITE_DASHBOARD_URL",
     "NEXT_PUBLIC_TRPC_USE_STREAMING",
+    "VITE_TRPC_USE_STREAMING",
 
     "POSTGRES_HOST",
     "POSTGRES_PORT",
@@ -72,11 +79,14 @@
     "NODE_ENV",
     "MODE",
     "SKIP_ENV_VALIDATION",
+    "VITE_SKIP_ENV_VALIDATION",
 
-    "VERCEL",
-    "VERCEL_ENV",
-    "VERCEL_URL",
-    "VERCEL_PROJECT_PRODUCTION_URL",
+    "NEXT_PUBLIC_VERCEL_ENV",
+    "VITE_VERCEL_ENV",
+    "NEXT_PUBLIC_VERCEL_URL",
+    "VITE_VERCEL_URL",
+    "NEXT_PUBLIC_VERCEL_PROJECT_PRODUCTION_URL",
+    "VITE_VERCEL_PROJECT_PRODUCTION_URL",
 
     "POSTGRES_URL",
     "POSTGRES_PRISMA_URL",
