--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,16 @@
-# App configuration
-NEXT_PUBLIC_APP_NAME="My App"
-NEXT_PUBLIC_APP_DESCRIPTION="This is my awesome application."
+# App configuration (for next.js)
+NEXT_PUBLIC_APP_NAME="Yukinu"
+NEXT_PUBLIC_APP_DESCRIPTION="Yukinu is a multi-vendor e-commerce platform that connects customers with a variety of sellers, offering a seamless shopping experience, easy product discovery, and powerful tools for vendors to manage their stores."
 NEXT_PUBLIC_WEB_URL="localhost:3000"
-NEXT_PUBLIC_DASHBOARD_URL="localhost:3001"
+NEXT_PUBLIC_DASHBOARD_URL="localhost:5173"
 NEXT_PUBLIC_TRPC_USE_STREAMING="true" # Disable httpBatchStreamLink if deploying to Nginx
+
+# App configuration (for vite)
+VITE_APP_NAME="Yukinu"
+VITE_APP_DESCRIPTION="Yukinu is a multi-vendor e-commerce platform that connects customers with a variety of sellers, offering a seamless shopping experience, easy product discovery, and powerful tools for vendors to manage their stores."
+VITE_WEB_URL="localhost:3000"
+VITE_DASHBOARD_URL="localhost:5173"
+VITE_TRPC_USE_STREAMING="true" # Disable httpBatchStreamLink if deploying to Nginx
 
 # Database configuration
 POSTGRES_HOST="127.0.0.1"
@@ -11,7 +18,7 @@ POSTGRES_PORT=5432
 POSTGRES_USER=""
 POSTGRES_PASSWORD=""
 POSTGRES_DATABASE="yuki_db"
-POSTGRES_SSL_MODE="true" # Disable SSL mode for local development
+POSTGRES_SSL_MODE="false" # Disable SSL mode for local development
 
 # OAuth configuration
 AUTH_FACEBOOK_ID=""
