--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "bun run --env-file ../../.env next build",
     "clean": "git clean -xdf .cache .next .turbo node_modules",
-    "dev": "bun run --env-file ../../.env next dev",
+    "dev": "bun run --env-file ../../.env next dev --turbopack --port $(microfrontends port)",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "bun --env-file ../../.env next typegen && eslint",
     "start": "bun run --env-file ../../.env next start",
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:trpc",
     "@trpc/tanstack-react-query": "catalog:trpc",
+    "@vercel/microfrontends": "^2.2.0",
     "@yukinu/api": "workspace:*",
     "@yukinu/auth": "workspace:*",
     "@yukinu/db": "workspace:*",
