--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -17,10 +17,10 @@
   "scripts": {
     "build": "tsdown",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
-    "db:generate": "bun run --env-file ../../.env drizzle-kit generate",
-    "db:migrate": "bun run --env-file ../../.env drizzle-kit migrate",
-    "db:push": "bun run --env-file ../../.env drizzle-kit push",
-    "db:studio": "bun run --env-file ../../.env drizzle-kit studio",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
