--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "next build",
     "clean": "git clean -xdf .cache .next .turbo node_modules",
-    "dev": "next dev --turbopack -p 5568",
+    "dev": "next dev --port $TURBO_MFE_PORT",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "next typegen && eslint",
     "start": "next start",
@@ -17,7 +17,6 @@
     "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:trpc",
     "@trpc/tanstack-react-query": "catalog:trpc",
-    "@vercel/microfrontends": "^2.2.0",
     "@yukinu/api": "workspace:*",
     "@yukinu/auth": "workspace:*",
     "@yukinu/db": "workspace:*",
