feat(build): update docker config

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -3,7 +3,7 @@ FROM oven/bun:latest AS base
 # ===========================================
 # Stage 1: Prune application dependencies
 # ===========================================
-FROM base AS pruner
+FROM base AS prepare
 WORKDIR /prune
 
 RUN bun install -g turbo
@@ -17,13 +17,20 @@ RUN turbo prune @yukinu/web --docker
 FROM base AS builder
 WORKDIR /build
 
-COPY --from=pruner /prune/out/json .
-COPY --from=pruner /prune/out/bun.lock .
-RUN bun install --no-save
+COPY --from=prepare /prune/out/json .
+RUN bun install
 
-COPY --from=pruner /prune/out/full .
-COPY .env .env
+COPY --from=prepare /prune/out/full .
+
+ARG TURBO_TEAM
+ENV TURBO_TEAM=$TURBO_TEAM
+ 
+ARG TURBO_TOKEN
+ENV TURBO_TOKEN=$TURBO_TOKEN
+
 ENV NEXT_BUILD_OUTPUT=standalone
+ENV SKIP_ENV_VALIDATION=true
+
 RUN bun run build
 
 # ===========================================
@@ -32,11 +39,15 @@ RUN bun run build
 FROM base AS runner
 WORKDIR /app
 
-COPY --from=builder /build/apps/web/.next/standalone ./
-COPY --from=builder /build/apps/web/.next/static ./apps/web/.next/static
-COPY --from=builder /build/apps/web/public ./apps/web/public
-COPY --from=builder /build/apps/web/node_modules ./node_modules
-COPY .env .env
+ENV PORT=3000 \
+    HOSTNAME="0.0.0.0"
 
-ENV PORT=3000
-CMD ["bun", "--env-file=.env", "apps/web/server.js"]
+RUN addgroup --system --gid 1001 yukinu && \
+    adduser --system --uid 1001 web
+USER web
+
+COPY --from=builder --chown=yukinu:web /build/apps/web/.next/standalone ./
+COPY --from=builder --chown=yukinu:web /build/apps/web/.next/static ./apps/web/.next/static
+COPY --from=builder --chown=yukinu:web /build/apps/web/public ./apps/web/public
+
+CMD ["bun", "--bun", "run", "apps/web/server.js"]
