--- a/apps/dashboard/Dockerfile
+++ b/apps/dashboard/Dockerfile
@@ -3,7 +3,7 @@ FROM oven/bun:latest AS base
 # ===========================================
 # Stage 1: Prune application dependencies
 # ===========================================
-FROM base AS pruner
+FROM base AS prepare
 WORKDIR /prune
 
 RUN bun install -g turbo
@@ -17,12 +17,18 @@ RUN turbo prune @yukinu/dashboard --docker
 FROM base AS builder
 WORKDIR /build
 
-COPY --from=pruner /prune/out/json .
-COPY --from=pruner /prune/out/bun.lock .
-RUN bun install --no-save
+COPY --from=prepare /prune/out/json .
+RUN bun install
 
-COPY --from=pruner /prune/out/full .
-COPY .env .env
+COPY --from=prepare /prune/out/full .
+
+ARG TURBO_TEAM
+ENV TURBO_TEAM=$TURBO_TEAM
+ 
+ARG TURBO_TOKEN
+ENV TURBO_TOKEN=$TURBO_TOKEN
+
+ENV SKIP_ENV_VALIDATION=true
 RUN bun run build
 
 # ===========================================
@@ -31,11 +37,20 @@ RUN bun run build
 FROM base AS runner
 WORKDIR /app
 
-COPY --from=builder /build/apps/dashboard/build ./apps/dashboard/build
-COPY --from=builder /build/apps/dashboard/node_modules ./apps/dashboard/node_modules
-COPY --from=builder /build/node_modules ./node_modules
-COPY .env .env
+ENV PORT=3000 \
+    HOSTNAME="0.0.0.0"
 
-ENV PORT=3000
-WORKDIR /app/apps/dashboard
-CMD ["bun", "--env-file=.env", "react-router-serve", "build/server/index.js"]
+RUN addgroup --system --gid 1001 yukinu && \
+    adduser --system --uid 1001 dashboard
+
+COPY --from=builder /build/apps/dashboard/public ./apps/dashboard/public
+
+COPY --from=builder --chown=yukinu:dashboard /build/apps/dashboard/build ./apps/dashboard/build
+COPY --from=builder --chown=yukinu:dashboard /build/apps/dashboard/package.json ./apps/dashboard/package.json
+COPY --from=builder --chown=yukinu:dashboard /build/apps/dashboard/node_modules ./apps/dashboard/node_modules
+
+COPY --from=builder --chown=yukinu:dashboard /build/package.json ./package.json
+COPY --from=builder --chown=yukinu:dashboard /build/node_modules ./node_modules
+
+USER dashboard
+CMD ["bun", "--bun", "--filter", "@yukinu/dashboard", "start"]
