--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,6 +8,9 @@ services:
         TURBO_TOKEN: ${TURBO_TOKEN}
     restart: unless-stopped
     env_file: .env
+    environment:
+      NODE_ENV: development
+      POSTGRES_HOST: db
     expose:
       - '3000'
     depends_on:
@@ -23,6 +26,9 @@ services:
         TURBO_TOKEN: ${TURBO_TOKEN}
     restart: unless-stopped
     env_file: .env
+    environment:
+      NODE_ENV: development
+      POSTGRES_HOST: db
     expose:
       - '3000'
     depends_on:
@@ -36,9 +42,9 @@ services:
       - '80:80'
       - '443:443'
     volumes:
-      - ./tools/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./tools/nginx/default.dev.conf:/etc/nginx/conf.d/default.conf
       - ./tools/nginx/certbot-www:/var/www/certbot
-      - /etc/letsencrypt:/etc/letsencrypt
+      - ./tools/nginx/certs:/etc/letsencrypt/live/localhost
     depends_on:
       - web
       - dashboard
