--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "turbo run build",
     "bump-deps": "bunx npm-check-updates --deep -u && bun install",
-    "clean": "git clean -xdf node_modules",
+    "clean": "git clean -xdf node_modules out",
     "clean:workspaces": "turbo run clean",
     "db:generate": "turbo run db:generate -F @yukinu/db",
     "db:migrate": "turbo run db:migrate -F @yukinu/db",
