--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,10 +6,12 @@ services:
       args:
         TURBO_TEAM: ${TURBO_TEAM}
         TURBO_TOKEN: ${TURBO_TOKEN}
+        NEXT_PUBLIC_APP_NAME: ${NEXT_PUBLIC_APP_NAME}
+        NEXT_PUBLIC_APP_DESCRIPTION: ${NEXT_PUBLIC_APP_DESCRIPTION}
+        NEXT_PUBLIC_TRPC_USE_STREAMING: false
     restart: unless-stopped
     env_file: .env
     environment:
-      NODE_ENV: development
       POSTGRES_HOST: db
     expose:
       - '3000'
@@ -24,10 +26,12 @@ services:
       args:
         TURBO_TEAM: ${TURBO_TEAM}
         TURBO_TOKEN: ${TURBO_TOKEN}
+        VITE_APP_NAME: ${VITE_APP_NAME}
+        VITE_APP_DESCRIPTION: ${VITE_APP_DESCRIPTION}
+        VITE_TRPC_USE_STREAMING: false
     restart: unless-stopped
     env_file: .env
     environment:
-      NODE_ENV: development
       POSTGRES_HOST: db
     expose:
       - '3000'
